completed the pdf compression
